# Odoo19_iot-control-center

./: README.md  README_MANUAL_zh_en_th.md  __init__.py  __manifest__.py  hooks.py
controllers/: __init__.py  firmware_download.py  internal_ingest.py  iot_attendance.py  openwrt_firmware_download.py
data/: control_board_data.xml  ir_cron.xml  menu_groups_fix.xml  remove_raw_packet_legacy.xml  visibility_binding_fix.xml
i18n/: en_US.po  iot_control_center.pot  th_TH.po  zh_CN.po
middleware/iot_bridge/: .env.example  Cargo.toml  README.md
middleware/iot_bridge/src/: main.rs
models/: __init__.py  iot_attendance_device.py  iot_attendance_punch.py  iot_attendance_punch_retention.py  iot_attendance_request.py  iot_attendance_user.py  iot_control_board.py  iot_department.py  iot_device.py  iot_device_group.py  iot_firmware.py  iot_firmware_upgrade_log.py  iot_hr_employee.py  iot_location.py  iot_mqtt_message.py  iot_openwrt_ap.py  iot_openwrt_client.py  iot_openwrt_firmware.py  iot_openwrt_job.py  iot_openwrt_template.py  iot_openwrt_template_ssid.py  iot_schedule.py  res_config_settings.py  th_alert.py  th_gateway.py  th_raw_packet.py  th_reading.py  th_sensor.py  th_sensor_group.py
security/: iot_security.xml  ir.model.access.csv
services/: __init__.py  mqtt_service.py  tcp_service.py
views/: iot_attendance_device_views.xml  iot_attendance_menu_views.xml  iot_attendance_punch_views.xml  iot_attendance_request_views.xml  iot_attendance_user_views.xml  iot_control_board_views.xml  iot_department_views.xml  iot_device_group_views.xml  iot_device_views.xml  (+16 more)
(+19 files in other folders)
